[project]
name = "carestechs-agent-orchestrator"
version = "0.1.0"
description = "Agent-driven orchestration layer on top of carestechs-flow-engine: drives the ia-framework feature lifecycle end-to-end."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Carestechs", email = "ai@techer.com.br" },
]
license = { text = "Proprietary" }

dependencies = [
    "fastapi>=0.115,<0.120",
    "uvicorn[standard]>=0.32,<0.35",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.4,<3",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "asyncpg>=0.29,<0.31",
    "alembic>=1.13,<2",
    "httpx>=0.27,<0.29",
    "typer>=0.12,<0.16",
    "uuid6>=2024.7.10",
    "pyyaml>=6,<7",
    "aiofiles>=23,<25",
    "jsonschema>=4,<5",
    "anthropic>=0.40,<1",
]

[project.scripts]
orchestrator = "app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<0.26",
    "respx>=0.21,<0.23",
    "freezegun>=1.5,<2",
    "ruff>=0.6,<0.9",
    "pyright>=1.1.380,<2",
]

[tool.orchestrator]
# Reserved for future configuration layer consumed by app.config's
# PyprojectTomlSource (T-003). Intentionally empty in v1.

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF", "SIM", "PT"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B", "SIM"]
"src/app/migrations/versions/*.py" = ["E", "F", "I", "B", "UP", "RUF", "SIM", "PT", "E501"]
"src/app/cli.py" = ["UP007"]

[tool.pyright]
include = ["src"]
exclude = ["src/app/migrations"]
typeCheckingMode = "strict"
reportMissingImports = true
pythonVersion = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "strict"
addopts = "--strict-markers"
testpaths = ["tests"]
markers = [
    "live: hits real LLM providers or the real flow engine; off by default, opt in via --run-live",
]
